# ConfigBuddy

./: .gitignore  ROADMAP.md  genindex.html  pyproject.toml  requirements.txt
.github/workflows/: static.yml
ConfigBuddy/: __init__.py  configbuddy.py
source/: conf.py  index.rst
source/usage/: installation.md  quickstart.md
